# ocaml-matrix

./: .gitignore  .ocamlformat  LICENSE.md  Makefile  README.md  docker_entry.sh  dune-project  implem.md  matrix-ci-client.opam  matrix-ci-current.opam  matrix-ci-server-setup.opam  matrix-ci-server.Dockerfile  matrix-ci-server.opam  matrix-ci-server.opam.template  matrix-client.opam  matrix-common.opam  matrix-ctos.opam  matrix-current.opam  matrix-server.opam  matrix-stos.opam  soa.md  tcpflow.dump
.github/workflows/: main.yml
__outdated__ server/: client_to_server.ml  dune  federation_routes.ml  helpers.ml  matrix_server.ml  server_helpers.ml  server_to_server.ml  store.mli
bench/: bench.ml  dune
ci-client/: client.ml  client.mli  dune  http.ml  http.mli  matrix_ci_client.ml  matrix_ci_client.mli  matrix_ci_current.ml  matrix_ci_current_example.ml  matrix_current.ml  matrix_current.mli  post.ml  room.ml
ci-server/: client_routes.ml  common_routes.ml  consts.ml  data.ml  dune  federation_routes.ml  helper.ml  identifiers.ml  matrix_ci_server.ml  matrix_ci_server_setup.ml  middleware.ml  paf_cohttp.ml  paf_cohttp.mli  routing.ml  store.md  store.ml
ci-server-mirage/: config.ml  unikernel.ml
ci_client/: dune  matrix_ci_client.ml
client/: commands.ml  dune  http.ml  matrix_client.ml
examples/client/: dune  main.ml  remote.example.json
fake_client/: commands.ml  dune  history.ml  http.ml  matrix_client.ml
json_encoding/: dune  json_encoding.ml
lib/matrix-common/: content.ml  dune  empty.ml  events.ml  matrix_common.ml  matrix_common.mli  message.ml  null.ml  push_rule.ml
lib/matrix-common/json_encoding/: dune  json_encoding.ml
lib/matrix-ctos/: README.md  account.ml  account_data.ml  audio_info.ml  authentication.ml  banning.ml  capabilities.ml  content.ml  context.ml  deprecated.ml  device_lists.ml  devices.ml  dune  empty.ml  encrypted_file.ml  errors.ml  event.ml  events.ml  file_info.ml  filter.ml  fully_read.ml  identifier.ml  image_info.ml  joined.ml  joining.ml  jwk.ml  key_event.ml  keys.ml  leaving.ml  location_info.ml  login.ml  logout.ml  matrix.ml  matrix.mli  matrix_ctos.ml  matrix_ctos.mli  media.ml  message_event.ml  notifications.ml  open_id.ml  (+31 more)
lib/matrix-stos/: README.md  backfill.ml  dune  edu.ml  event_auth.ml  federation_request.ml  get_missing_events.ml  inviting_rooms.ml  joining_rooms.ml  key.ml  matrix_stos.ml  matrix_stos.mli  pdu.ml  public_rooms.ml  query.ml  retrieve.ml  send.ml  signatures.ml  user.ml  version.ml  well_known.ml
ppx/: dune  ppx_deriver_accessor.ml  ppx_rewriter_accessor.ml
server/: client_to_server.ml  const.ml  dune  endpoint.ml  federation_endpoints.ml  federation_routes.ml  helper.ml  helpers.ml  matrix_server.ml  media_endpoints.ml  media_routes.ml  room_endpoint.ml  room_helpers.ml  routes.ml  routing.ml  server_helpers.ml  server_to_server.ml  store.ml  store.mli
