opam-version: "2.0"
version: "0.1"
synopsis:
  "A minimalist matrix server for the hosting of CI trigerred messages"
maintainer: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
authors: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
homepage: "https://github.com/clecat/ocaml-matrix"
bug-reports: "https://github.com/clecat/ocaml-matrix/issues"
depends: [
  "ocaml" {>= "4.11"}
  "dune" {>= "2.8"}
  "odoc" {with-doc}
  "matrix-ctos" {= version}
  "matrix-stos" {= version}
  "dream-mirage"
  "lwt_ppx"
  "astring"
  "base64"
  "bheap"
  "cmdliner"
  "ezjsonm"
  "fmt"
  "irmin-fs"
  "irmin-unix"
  "logs"
  "tcpip" {>= "7.0.0"}
  "mirage-crypto-ec"
  "mirage-time"
  "mirage-time-unix"
  "mirage-clock-unix"
  "mirage-crypto-rng-mirage"
  "mirage-kv"
  "ppxlib"
  "uuidm"
  "x509"
]
pin-depends: [
  ["dream.~dev"         "git+https://github.com/clecat/dream.git"]
  ["dream-mirage.~dev"  "git+https://github.com/clecat/dream.git"]
  ["dream-pure.~dev"    "git+https://github.com/clecat/dream.git"]
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
