opam-version: "2.0"
version: "0.1"
synopsis:
  "A minimalist matrix server for the hosting of CI trigerred messages"
maintainer: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
authors: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
homepage: "https://github.com/clecat/ocaml-matrix"
bug-reports: "https://github.com/clecat/ocaml-matrix/issues"
depends: [
  "ocaml" {>= "4.11"}
  "dune" {>= "2.8"}
  "odoc" {with-doc}
  "matrix-ctos" {= version}
  "matrix-stos" {= version}
  "dream-mirage"
  "lwt_ppx"
  "astring"
  "base64"
  "bheap"
  "cmdliner" {>= "1.1.0"}
  "ezjsonm"
  "fmt"
  "irmin-fs"
  "irmin-unix"
  "logs"
  "tcpip" {>= "7.0.0"}
  "mirage-crypto-ec"
  "mirage-time"
  "mirage-time-unix"
  "mirage-clock-unix"
  "mirage-crypto-rng-mirage"
  "mirage-kv"
  "ca-certs-nss"
  "ppxlib"
  "uuidm"
  "x509"
  "shexp" {with-test}
]
pin-depends: [
  ["dream.~dev"         "git+https://github.com/clecat/dream.git#d04b1a620e6d169fb133f6057a59190c7430bfcc"]
  ["dream-mirage.~dev"  "git+https://github.com/clecat/dream.git#d04b1a620e6d169fb133f6057a59190c7430bfcc"]
  ["dream-pure.~dev"    "git+https://github.com/clecat/dream.git#d04b1a620e6d169fb133f6057a59190c7430bfcc"]
  # cmdliner.1.1.0
  ["index.1.6.0"        "git+https://github.com/MisterDA/index.git#1b767f89a41716703a8a067c8470c494332f8fd4"]
  ["git-unix.3.8.0"     "git+https://github.com/MisterDA/ocaml-git.git#d52aa79f782d3654e3661778811888554d99e337"]
  ["hxd.0.3.1"          "git+https://github.com/dinosaure/hxd.git#4d3c4b35d74cbd9782d12a8d13a7d047db17e182"]
  ["irmin.3.0.0"        "git+https://github.com/MisterDA/irmin.git#ba5265d13514b26bcf2baf45906dafbe3aed8512"]
  ["irmin-fs.3.0.0"     "git+https://github.com/MisterDA/irmin.git#ba5265d13514b26bcf2baf45906dafbe3aed8512"]
  ["irmin-git.3.0.0"    "git+https://github.com/MisterDA/irmin.git#ba5265d13514b26bcf2baf45906dafbe3aed8512"]
  ["irmin-graphql.3.0.0" "git+https://github.com/MisterDA/irmin.git#ba5265d13514b26bcf2baf45906dafbe3aed8512"]
  ["irmin-http.3.0.0"   "git+https://github.com/MisterDA/irmin.git#ba5265d13514b26bcf2baf45906dafbe3aed8512"]
  ["irmin-pack.3.0.0"   "git+https://github.com/MisterDA/irmin.git#ba5265d13514b26bcf2baf45906dafbe3aed8512"]
  ["irmin-tezos.3.0.0"  "git+https://github.com/MisterDA/irmin.git#ba5265d13514b26bcf2baf45906dafbe3aed8512"]
  ["irmin-unix.3.0.0"   "git+https://github.com/MisterDA/irmin.git#ba5265d13514b26bcf2baf45906dafbe3aed8512"]
  ["ppx_irmin.3.0.0"    "git+https://github.com/MisterDA/irmin.git#ba5265d13514b26bcf2baf45906dafbe3aed8512"]
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
