opam-version: "2.0"
version: "0.1"
synopsis:
  "A minimalist matrix server for the hosting of CI trigerred messages"
maintainer: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
authors: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
homepage: "https://github.com/clecat/ocaml-matrix"
bug-reports: "https://github.com/clecat/ocaml-matrix/issues"
depends: [
  "ocaml" {>= "4.11"}
  "dune" {>= "2.8"}
  "odoc" {with-doc}
  "matrix-ctos" {= version}
  "matrix-stos" {= version}
  "dream-mirage"
  "lwt_ppx"
  "astring"
  "base64"
  "bheap"
  "cmdliner" {>= "1.1.0"}
  "ezjsonm"
  "fmt"
  "irmin-fs" {>= "3.0"}
  "irmin-git" {>= "3.6"}
  "logs"
  "tcpip" {>= "7.0.0"}
  "mirage-crypto-ec"
  "mirage-time"
  "mirage-time-unix"
  "mirage-clock-unix"
  "mirage-crypto-rng-mirage"
  "mirage-kv"
  "ca-certs-nss"
  "ppxlib"
  "uuidm"
  "x509"
  "shexp" {with-test}
]
pin-depends: [
  ["dream-pure.dev"    "git+https://github.com/aantron/dream.git#006196fa0c957ea4f4aa3e949803b09cc1b3010b"]
  ["dream.dev"         "git+https://github.com/aantron/dream.git#006196fa0c957ea4f4aa3e949803b09cc1b3010b"]
  ["dream-mirage.dev"  "git+https://github.com/aantron/dream.git#006196fa0c957ea4f4aa3e949803b09cc1b3010b"]
  ["dream-httpaf.dev"  "git+https://github.com/aantron/dream.git#006196fa0c957ea4f4aa3e949803b09cc1b3010b"]
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
