opam-version: "2.0"
version: "0.1"
synopsis: "Library for the client to server endpoints of matrix protocole"
maintainer: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
authors: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
homepage: "https://github.com/clecat/ocaml-matrix"
bug-reports: "https://github.com/clecat/ocaml-matrix/issues"
depends: [
  "ocaml" {>= "4.11"}
  "dune" {>= "2.8"}
  "odoc" {with-doc}
  "matrix-common" {= version}
  "ezjsonm"
  "fmt"
  "logs"
  "ppxlib"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
