opam-version: "2.1"
version: "0.1"
synopsis: "A minimalist matrix client for an ocurrent plugin"
maintainer: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
authors: ["Gwenaëlle Lecat <charles-edouard@tarides.com>"]
homepage: "https://github.com/clecat/ocaml-matrix"
bug-reports: "https://github.com/clecat/ocaml-matrix/issues"
depends: [
  "dune" {>= "2.8"}
  "odoc" {with-doc}
  "matrix-ctos" {= version}
  "cohttp"
  "cohttp-lwt"
  "cohttp-lwt-unix"
  "ezjsonm"
  "fmt"
  "logs"
  "lwt"
  "ppxlib"
  "uuidm"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
