(library
 (name matrix_current)
 (public_name matrix-current)
 (modules matrix_current post client http room)
 (flags
  (:standard -w -69))
 (libraries
  matrix-ctos
  fmt.tty
  cmdliner
  logs
  logs.cli
  logs.fmt
  lwt
  cohttp
  cohttp-lwt
  cohttp-lwt-unix
  uuidm
  current
  current.cache
  current.term))
