(library
 (name matrix_ci_server)
 (public_name matrix-ci-server)
 (modules
  consts
  common_routes
  client_routes
  federation_routes
  middleware
  identifiers
  helper
  store
  paf_cohttp)
 (libraries
  dream-mirage
  matrix-ctos
  matrix-stos
  irmin-unix
  uuidm
  mirage-time
  mirage-stack)
 (preprocess
  (pps lwt_ppx)))

(executable
 (modes byte exe)
 (name matrix_ci_server)
 (public_name matrix-ci-server-bin)
 (package matrix-ci-server)
 (modules matrix_ci_server)
 (libraries
  matrix_ci_server
  mirage-clock-unix
  mirage-time-unix
  tcpip.stack-socket
  mirage-crypto-rng-mirage)
 (preprocess
  (pps lwt_ppx)))

(executable
 (modes byte exe)
 (name matrix_ci_server_setup)
 (public_name matrix-ci-server-setup)
 (package matrix-ci-server)
 (modules matrix_ci_server_setup)
 (libraries irmin-unix cmdliner)
 (preprocess
  (pps lwt_ppx)))
