(library
 (name matrix_ci_server)
 (public_name matrix-ci-server)
 (modules
  consts
  common_routes
  client_routes
  federation_routes
  middleware
  identifiers
  helper
  store
  paf_cohttp)
 (libraries
  dream-mirage
  matrix-ctos
  matrix-stos
  cohttp-lwt
  irmin-mirage-git
  uuidm
  mirage-time
  tcpip)
 (preprocess
  (pps lwt_ppx)))

(executable
 (modes byte exe)
 (name matrix_ci_server)
 (public_name matrix-ci-server-bin)
 (package matrix-ci-server)
 (modules matrix_ci_server)
 (libraries
  matrix_ci_server
  mirage-clock-unix
  mirage-time-unix
  tcpip.stack-socket
  mirage-crypto-rng.unix
  mirage-crypto-rng-mirage
  git-mirage.happy-eyeballs
  git-mirage.tcp
  fmt.tty
  logs.fmt)
 (preprocess
  (pps lwt_ppx)))

(executable
 (modes byte exe)
 (name matrix_ci_server_setup)
 (public_name matrix-ci-server-setup)
 (package matrix-ci-server)
 (modules matrix_ci_server_setup)
 (libraries
  mirage-clock-unix
  mirage-time-unix
  tcpip.stack-socket
  mirage-crypto-rng.unix
  mirage-crypto-rng-mirage
  irmin-mirage-git
  git-mirage.happy-eyeballs
  git-mirage.tcp
  fmt.tty
  logs.fmt
  logs.cli)
 (preprocess
  (pps lwt_ppx)))
